class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception500.java
package com.example.demo.common.errors;

public class Exception500 extends RuntimeException {

	public Exception500(String msg) {
		super();
	}
}
